--- a/templates/single.html
+++ b/templates/single.html
@@ -370,7 +370,7 @@
   <script src="js/typed.js"></script>
             <script>
             var typed = new Typed('.typed-words', {
-            strings: ["Motivational Speakers","Professional Speakers","Business Speakers", "Professional Life Coach"],
+            strings: ["."],
             typeSpeed: 80,
             backSpeed: 80,
             backDelay: 4000,
