--- a/templates/index.html
+++ b/templates/index.html
@@ -502,7 +502,7 @@
             <div class="border-top pt-5">
               <p class="copyright"><small>
               <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Developed with <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="">eTecknologies</a> | Template by <a href="https://colorlib.com" target="_blank" >Colorlib</a>
+            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Developed with <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="https://twitter.com/Taiwoadegite" target="_blank">adegitetaiwo</a> | Template by <a href="https://colorlib.com" target="_blank" >Colorlib</a>
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></small></p>
         
             </div>
